Fixed Typo in label

--- a/templates/home.html
+++ b/templates/home.html
@@ -67,7 +67,7 @@
                 <input type="text" name="username" placeholder="Username">
             </div>
             <div class="Password">
-                <label>Username</label>
+                <label>Password</label>
                 <input type="password" name="password" placeholder="Password">
             </div>
         </form>
